# app-router

./: .gitignore  LICENSE  README.md  __init__.py  cli.py  csrf.py  pyproject.toml  router.py
app_router/: __init__.py  assets.py  cli.py  csrf.py  exceptions.py  helpers.py  responses.py  router.py
app_router/static/: router.js
static/: router.js
templates/: 404.html  500.html
