[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app-router"
version = "0.1.0"
description = "A secure, server-driven app router for Flask and Jinja."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "app-router contributors" },
]
keywords = ["flask", "jinja", "router", "server-rendered", "ssr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "Flask>=2.3",
    "Jinja2>=3.1",
    "MarkupSafe>=2.1",
    "Werkzeug>=2.3",
    "itsdangerous>=2.1",
]

[project.scripts]
app-router = "app_router.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app_router*"]

[tool.setuptools.package-data]
app_router = ["py.typed", "templates/*.html", "static/*.js"]
